# pypsa-eur

./: .gitignore  Snakefile  flake.nix  pyproject.toml
config/: config.default.yaml
config/test/: config.electricity.yaml  config.myopic.yaml  config.overnight.yaml  config.perfect.yaml
envs/: environment.fixed.yaml  environment.yaml
rules/: build_electricity.smk  build_sector.smk  postprocess.smk  retrieve.smk  solve_electricity.smk  solve_myopic.smk  solve_overnight.smk  solve_perfect.smk
