[tool.poetry]
name = "pypsa-eur"
version = "0.10.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.0"
atlite = "^0.2.9"
pypsa = "^0.26.1"
linopy = "^0.3.8"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
pycountry = "^23.12.11"
seaborn = "^0.13.2"
snakemake = "^7.32.4"
memory-profiler = "^0.61.0"
lxml = "^5.1.0"
powerplantmatching = "^0.5.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
geopandas = "^0.14.3"
xarray = "^2024.2.0"
rioxarray = "^0.15.1"
netCDF4 = "^1.6.5"
networkx = "^3.2.1"
scipy = "^1.12.0"
shapely = "^2.0.3"
PySCIPOpt = "^5.0.0"
proj = "^0.2.0"
fiona = "^1.9.6"
country-converter = "^1.2"
geopy = "^2.4.1"
tqdm = "^4.66.2"
pytz = "^2024.1"
tabula-py = "^2.9.0"
pyxlsb = "^1.0.10"
graphviz = "^0.20.2"
pre-commit = "^3.6.2"
ipython = "^8.22.2"
Cartopy = "^0.22.0"
descartes = "^1.1.0"
rasterio = "^1.3.9"
tsam = "^2.3.1"
snakemake-storage-plugin-http = "^0.2.3"
snakemake-executor-plugin-slurm = "^0.4.2"
snakemake-executor-plugin-cluster-generic = "^1.0.9"
highspy = "^1.5.3"
matplotlib = "^3.8.3"
tables = "^3.9.2"
pyyaml = "^6.0.1"
distributed = "^2024.3.1"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
